# AccordsEnBref

./: LICENSE  README.md  install-tesseract-poppler-ubuntu.sh  pyproject.toml  requirements-format.txt  requirements.txt  setup.py
notebooks/: 0_recup_docx_from_legifrance.ipynb  10_notebook_eval_dist.ipynb  11_MemSum_alternative_text2text.ipynb  12_MemSum_inference.ipynb  13_notebook_evaluation_final.ipynb  1_notebook_exploratoire.ipynb  2_notebook_ocr_all.ipynb  3_notebook_ocr_to_parquet.ipynb  3b_notebook_docx_to_parquet.ipynb  4_notebook_create_summary_from_pdf.ipynb  4b_notebook_create_summary_from_pdf_with_layoutparser.ipynb  5_notebook_docx_table_of_contents.ipynb  6_notebook_docx_to_image.ipynb  7_notebook_extraction_layoutparser_annotations.ipynb  8_notebook_finetuning_layoutparser.ipynb  9_notebook_inference.ipynb  Z_test_ocr.ipynb
notebooks/utils/: A_cleaning_dataset.ipynb  B_image_dataset.ipynb  C_detects_comments_in_docx.ipynb  D_stats_dec_accord_page.ipynb  E_graph_loss.ipynb  F_echantillon_to_parquet.ipynb  G_constitution_fichier_resultat.ipynb  H_compte_OCR.ipynb
src/diapason/: diapason_ocr.py
