[tool.poetry]
name = "diapason"
version = "0.1.0"
description = "Dares Internalisation des Accords Pour Apprendre Sur l''Organisation Négociée"
authors = ["cthiounn"]
license = "GNU GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"